--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/src/index.ts" }],
-  "functions": {
-    "regions": ["fra1"]
-  }
+  "routes": [{ "src": "/(.*)", "dest": "/src/index.ts" }]
 }
