--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "npx tsx src/dev.ts",
-    "debug": "node --inspect-brk ./node_modules/.bin/tsx scripts/insert_real_data.ts",
+    "dev": "tsx src/dev.ts",
+    "debug": "node --inspect-brk node_modules/.bin/tsx scripts/insert_real_data.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -12,7 +12,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@vercel/blob": "^1.0.0",
     "@vercel/node": "^5.1.14",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
@@ -25,7 +25,7 @@
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.0",
@@ -36,5 +36,5 @@
     "tsx": "^4.19.3",
     "typescript": "^5.0.0"
   },
-  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
+  "packageManager": "pnpm@10.8.1"
 }
