--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx src/dev.ts",
-    "hot": "nodemon --exec tsx src/dev.ts",
+    "nodemon": "nodemon --exec tsx src/dev.ts",
     "debug": "node --inspect-brk node_modules/.bin/tsx scripts/insert_data.ts",
     "build": "tsc",
     "start": "node dist/index.js"
