--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "nodemon": "nodemon --exec tsx src/dev.ts",
     "debug": "node --inspect-brk node_modules/.bin/tsx scripts/insert_data.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
@@ -26,6 +28,7 @@
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
@@ -34,10 +37,13 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/supertest": "^6.0.3",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "^5.0.0"
+    "tsx": "^4.19.4",
+    "typescript": "^5.0.0",
+    "vitest": "^3.1.3"
   },
   "packageManager": "pnpm@10.8.1"
 }
