--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tsx src/dev.ts",
     "nodemon": "nodemon --exec tsx src/dev.ts",
-    "debug": "node --inspect-brk node_modules/.bin/tsx scripts/insert_data.ts",
+    "debug": "npx --node-arg=--inspect-brk tsx src/dev.ts",
+    "debug:script": "node --inspect-brk node_modules/.bin/tsx scripts/insert_data.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
