--- a/tests/docker-postgres.test.yml
+++ b/tests/docker-postgres.test.yml
@@ -20,3 +20,9 @@ services:
 
 volumes:
   ecommerce_test_pgdata:
+
+
+#docker stop $(docker ps -aq)
+#docker rm $(docker ps -aq)
+#docker volume rm $(docker volume ls -q)
+#
