--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "nodemon": "nodemon --exec tsx src/dev.ts",
     "debug": "npx --node-arg=--inspect-brk tsx src/dev.ts",
     "debug:script": "node --inspect-brk node_modules/.bin/tsx scripts/insert_data.ts",
-    "build": "tsc",
+    "typecheck": "tsc --noEmit",
+    "build": "pnpm typecheck && tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "codegen:recored": "NODE_ENV=test SEED=true PORT=4010 tsx src/dev.ts"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.5",
     "@vercel/blob": "^1.0.0",
     "@vercel/node": "^5.1.14",
     "bcryptjs": "^3.0.2",
@@ -34,7 +34,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^18.0.0",
