--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
-  "name": "express-server",
+  "name": "nextjs-ecommerce-api",
   "version": "1.0.0",
+  "private": true,
+  "description": "E-commerce platform built with Next.js, Express, and PostgreSQL",
+  "author": "GILAD",
+  "license": "MIT",
+  "keywords": [
+    "nextjs",
+    "ecommerce",
+    "express",
+    "postgres",
+    "typescript"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/giladfuchs/nextjs-ecommerce-api"
+  },
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx src/dev.ts",
