--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "next-ecommerce-backend",
   "version": "1.0.0",
-  "private": true,
   "description": "Backend API for Next.js e-commerce platform",
   "author": "GILAD",
   "license": "MIT",
+  "private": false,
+  "main": "dist/src/lib/index.js",
+  "types": "dist/src/lib/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    "./lib/util": "./dist/src/lib/util.js",
+    "./lib/service": "./dist/src/lib/service.js",
+    "./lib/db": "./dist/src/lib/db.js",
+    "./lib/entities": "./dist/src/lib/entities.js",
+    "./controller/public": "./dist/src/controller/public.js",
+    "./controller/auth": "./dist/src/controller/auth.js"
+  },
   "keywords": [
     "express",
     "ecommerce",
@@ -17,7 +30,6 @@
     "type": "git",
     "url": "https://github.com/giladfuchs/next-ecommerce"
   },
-  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx src/dev.ts",
     "cron": "tsx scripts/cron.ts",
