--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "debug": "npx --node-arg=--inspect-brk tsx src/dev.ts",
     "debug:script": "node --inspect-brk node_modules/.bin/tsx scripts/real_data.ts",
     "typecheck": "tsc --noEmit",
-    "build": "tsc",
+    "build": "pnpm typecheck && tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
