--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
-  "outputDirectory": "dist",
+  "builds": [
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
